[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cookie-consent-compliance"
version = "0.0.7"
authors = [
  { name="pydevmans", email="samirs247@icloud.com" },
]
description = "A deterministic package allowing user consent implication for setting cookie on django projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build>=1.2.2.post1",
]

[project.urls]
Homepage = "https://github.com/pydevmans/cookieconsent"
Issues = "https://github.com/pydevmans/cookieconsent/issues"
